--- a/requirements.txt
+++ b/requirements.txt
@@ -31,10 +31,13 @@ rich==13.9.2
 rpds-py==0.20.0
 six==1.16.0
 smmap==5.0.1
-streamlit==1.39.0
+streamlit~=1.40.2
 tenacity==9.0.0
 toml==0.10.2
 tornado==6.4.1
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
+
+plotly~=5.24.1
+matplotlib~=3.9.2
